--- a/front-vue/package.json
+++ b/front-vue/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@popperjs/core": "^2.11.5",
+    "@syncfusion/ej2-vue-dropdowns": "^20.2.36",
+    "@syncfusion/ej2-vue-grids": "^20.2.36",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "moment": "^2.29.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
